We have an implicit 1 MSB bit in the mantissa. Pointed out by Matt Thomas. Fixes PR port-sparc64/47536.